Cálculo de la masa invariante a partir de los datos sobre los  leptones detectados en una simulación de colisiones de partículas.

--- a/Lepton-Invariant-Mass-Distribution.ipynb
+++ b/Lepton-Invariant-Mass-Distribution.ipynb
@@ -33,7 +33,7 @@
     "       p_T \\times \\cos \\phi\\\\\n",
     "       p_T \\times \\sin \\phi\\\\\n",
     "       p_T \\times \\sinh \\eta\n",
-    "   \\end{pmatrix}\n",
+    "   \\end{pmatrix} \\ \\ \\ \\ (2)\n",
     "$$\n",
     "\n",
     "With $p_T$ the transverse momentum, $\\phi$ the azimuth angle and $\\eta$ the pseudo rapidity. The modulus $p$ is\n",
@@ -57,7 +57,7 @@
     "We can calculate the invariant mass of two particles knowing that the invariant mass of the 4-momentum sum, which is (neglecting the mass of the two particles):\n",
     "\n",
     "$$\n",
-    "    m_{inv}(\\vec{a}, \\vec{b}) = \\sqrt{\\left( \\sqrt{a_x^2 + a_y^2 + a_z^2} + \\sqrt{b_x^2 + b_y^2 + b_z^2} \\right)^2 - (a_x+b_x)^2 - (a_y + b_y)^2 - (a_z^2 + b_z)^2} \\ \\ \\ \\ (2)\n",
+    "    m_{inv}(\\vec{a}, \\vec{b}) = \\sqrt{\\left( \\sqrt{a_x^2 + a_y^2 + a_z^2} + \\sqrt{b_x^2 + b_y^2 + b_z^2} \\right)^2 - (a_x+b_x)^2 - (a_y + b_y)^2 - (a_z^2 + b_z)^2} \\ \\ \\ \\ (3)\n",
     "$$\n",
     "\n",
     "### References:\n",
@@ -776,42 +776,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# # A similar thing happens to the electron data. Since we only can get information from the events that come\n",
-    "# # in lepton pairs we have to clean the not useful data.\n",
-    "\n",
-    "# events = len(pt_muon)\n",
-    "\n",
-    "# # This will be the cleaned data for the muon detections:\n",
-    "# pt_m = np.array([])\n",
-    "# eta_m = np.array([])\n",
-    "# phi_m = np.array([])\n",
-    "# charge_m = np.array([])\n",
-    "\n",
-    "# for i in range(events):\n",
-    "#     if len(pt_muon[i]) == 2:\n",
-    "#         pt_m = np.append(pt_m, np.array([pt_muon[i,0], pt_muon[i,1]]))\n",
-    "#         eta_m = np.append(eta_m, np.array([eta_muon[i,0], eta_muon[i,1]]))\n",
-    "#         phi_m = np.append(phi_m, np.array([phi_muon[i,0], phi_muon[i,1]]))\n",
-    "#         charge_m = np.append(charge_m, np.array([charge_muon[i,0], charge_muon[i,1]]))\n",
-    "        \n",
-    "# # And this will be the cleaned data for the electron detections:\n",
-    "# pt_e = np.array([])a\n",
-    "# eta_e = np.array([])\n",
-    "# phi_e = np.array([])\n",
-    "# charge_e = np.array([])\n",
-    "\n",
-    "# for i in range(events):\n",
-    "#     if len(pt_electron[i]) == 2:\n",
-    "#         pt_e = np.append(pt_e, np.array([pt_electron[i,0], pt_electron[i,1]]))\n",
-    "#         eta_e = np.append(eta_e, np.array([eta_electron[i,0], eta_electron[i,1]]))\n",
-    "#         phi_e = np.append(phi_e, np.array([phi_electron[i,0], phi_electron[i,1]]))\n",
-    "#         charge_e = np.append(charge_e, np.array([charge_electron[i,0], charge_electron[i,1]]))"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1168,6 +1132,391 @@
    ],
    "source": [
     "df2 = pd.read_csv('/tf/Higgs-Boson-LHC-Collision-Detector/electron_data.csv')\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can now compute the proper calculations in order to get then the Invariant Mass\n",
+    "# We'll start by calculating the momentum p, which following the eq. 2 and 3 is:\n",
+    "\n",
+    "# For the muons\n",
+    "\n",
+    "df1[\"m1_x\"] = df1[\"pt_m1\"]*np.cos(df1[\"phi_m1\"])\n",
+    "df1[\"m1_y\"] = df1[\"pt_m1\"]*np.sin(df1[\"phi_m1\"])\n",
+    "df1[\"m1_z\"] = df1[\"pt_m1\"]*np.sinh(df1[\"eta_m1\"])\n",
+    "\n",
+    "df1[\"m2_x\"] = df1[\"pt_m2\"]*np.cos(df1[\"phi_m2\"])\n",
+    "df1[\"m2_y\"] = df1[\"pt_m2\"]*np.sin(df1[\"phi_m2\"])\n",
+    "df1[\"m2_z\"] = df1[\"pt_m2\"]*np.sinh(df1[\"eta_m2\"])\n",
+    "\n",
+    "# For the electrons\n",
+    "\n",
+    "df2[\"e1_x\"] = df2[\"pt_e1\"]*np.cos(df2[\"phi_e1\"])\n",
+    "df2[\"e1_y\"] = df2[\"pt_e1\"]*np.sin(df2[\"phi_e1\"])\n",
+    "df2[\"e1_z\"] = df2[\"pt_e1\"]*np.sinh(df2[\"eta_e1\"])\n",
+    "\n",
+    "df2[\"e2_x\"] = df2[\"pt_e2\"]*np.cos(df2[\"phi_e2\"])\n",
+    "df2[\"e2_y\"] = df2[\"pt_e2\"]*np.sin(df2[\"phi_e2\"])\n",
+    "df2[\"e2_z\"] = df2[\"pt_e2\"]*np.sinh(df2[\"eta_e2\"])\n",
+    "\n",
+    "# Then we can calculate the invariant mass\n",
+    "\n",
+    "# For the muons:\n",
+    "df1[\"muon_m_inv\"] = np.sqrt((np.sqrt(df1[\"m1_x\"]**2 + df1[\"m1_y\"]**2 + df1[\"m1_z\"]**2) + \n",
+    "                             np.sqrt(df1[\"m2_x\"]**2 + df1[\"m2_y\"]**2 + df1[\"m2_z\"]**2))**2 - \n",
+    "                            (df1[\"m1_x\"] + df1[\"m2_x\"])**2 - (df1[\"m1_y\"] + df1[\"m2_y\"])**2 -\n",
+    "                            (df1[\"m1_z\"] + df1[\"m2_z\"])**2 )\n",
+    "\n",
+    "df2[\"electron_m_inv\"] = np.sqrt((np.sqrt(df2[\"e1_x\"]**2 + df2[\"e1_y\"]**2 + df2[\"e1_z\"]**2) + \n",
+    "                             np.sqrt(df2[\"e2_x\"]**2 + df2[\"e2_y\"]**2 + df2[\"e2_z\"]**2))**2 - \n",
+    "                            (df2[\"e1_x\"] + df2[\"e2_x\"])**2 - (df2[\"e1_y\"] + df2[\"e2_y\"])**2 -\n",
+    "                            (df2[\"e1_z\"] + df2[\"e2_z\"])**2 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pt_m1</th>\n",
+       "      <th>pt_m2</th>\n",
+       "      <th>eta_m1</th>\n",
+       "      <th>eta_m2</th>\n",
+       "      <th>phi_m1</th>\n",
+       "      <th>phi_m2</th>\n",
+       "      <th>charge_m1</th>\n",
+       "      <th>charge_m2</th>\n",
+       "      <th>m1_x</th>\n",
+       "      <th>m1_y</th>\n",
+       "      <th>m1_z</th>\n",
+       "      <th>m2_x</th>\n",
+       "      <th>m2_y</th>\n",
+       "      <th>m2_z</th>\n",
+       "      <th>muon_m_inv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>97.789630</td>\n",
+       "      <td>19.964151</td>\n",
+       "      <td>0.878810</td>\n",
+       "      <td>-0.802487</td>\n",
+       "      <td>2.420791</td>\n",
+       "      <td>-2.895401</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-73.467089</td>\n",
+       "      <td>64.539899</td>\n",
+       "      <td>97.435401</td>\n",
+       "      <td>-19.362181</td>\n",
+       "      <td>-4.865517</td>\n",
+       "      <td>-17.796731</td>\n",
+       "      <td>92.925519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>95.542180</td>\n",
+       "      <td>45.712536</td>\n",
+       "      <td>-0.516883</td>\n",
+       "      <td>0.572928</td>\n",
+       "      <td>-0.010758</td>\n",
+       "      <td>-0.509320</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>95.536651</td>\n",
+       "      <td>-1.027829</td>\n",
+       "      <td>-51.612646</td>\n",
+       "      <td>39.910520</td>\n",
+       "      <td>-22.288704</td>\n",
+       "      <td>27.646485</td>\n",
+       "      <td>82.369004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>48.594920</td>\n",
+       "      <td>38.855106</td>\n",
+       "      <td>1.577177</td>\n",
+       "      <td>0.372206</td>\n",
+       "      <td>2.543302</td>\n",
+       "      <td>0.499532</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-40.153976</td>\n",
+       "      <td>27.370139</td>\n",
+       "      <td>112.611685</td>\n",
+       "      <td>34.107274</td>\n",
+       "      <td>18.612177</td>\n",
+       "      <td>14.798334</td>\n",
+       "      <td>92.662221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>83.976875</td>\n",
+       "      <td>42.813442</td>\n",
+       "      <td>0.908262</td>\n",
+       "      <td>0.123594</td>\n",
+       "      <td>1.499397</td>\n",
+       "      <td>0.145307</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5.990808</td>\n",
+       "      <td>83.762914</td>\n",
+       "      <td>87.200980</td>\n",
+       "      <td>42.362252</td>\n",
+       "      <td>6.199228</td>\n",
+       "      <td>5.304960</td>\n",
+       "      <td>89.298288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>71.092410</td>\n",
+       "      <td>58.603443</td>\n",
+       "      <td>-0.281558</td>\n",
+       "      <td>0.978713</td>\n",
+       "      <td>2.078060</td>\n",
+       "      <td>1.781077</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-34.535772</td>\n",
+       "      <td>62.140254</td>\n",
+       "      <td>-20.282181</td>\n",
+       "      <td>-12.232560</td>\n",
+       "      <td>57.312547</td>\n",
+       "      <td>66.961329</td>\n",
+       "      <td>88.912945</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       pt_m1      pt_m2    eta_m1    eta_m2    phi_m1    phi_m2  charge_m1  \\\n",
+       "0  97.789630  19.964151  0.878810 -0.802487  2.420791 -2.895401          1   \n",
+       "1  95.542180  45.712536 -0.516883  0.572928 -0.010758 -0.509320          1   \n",
+       "2  48.594920  38.855106  1.577177  0.372206  2.543302  0.499532          1   \n",
+       "3  83.976875  42.813442  0.908262  0.123594  1.499397  0.145307         -1   \n",
+       "4  71.092410  58.603443 -0.281558  0.978713  2.078060  1.781077          1   \n",
+       "\n",
+       "   charge_m2       m1_x       m1_y        m1_z       m2_x       m2_y  \\\n",
+       "0         -1 -73.467089  64.539899   97.435401 -19.362181  -4.865517   \n",
+       "1         -1  95.536651  -1.027829  -51.612646  39.910520 -22.288704   \n",
+       "2         -1 -40.153976  27.370139  112.611685  34.107274  18.612177   \n",
+       "3          1   5.990808  83.762914   87.200980  42.362252   6.199228   \n",
+       "4         -1 -34.535772  62.140254  -20.282181 -12.232560  57.312547   \n",
+       "\n",
+       "        m2_z  muon_m_inv  \n",
+       "0 -17.796731   92.925519  \n",
+       "1  27.646485   82.369004  \n",
+       "2  14.798334   92.662221  \n",
+       "3   5.304960   89.298288  \n",
+       "4  66.961329   88.912945  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now see what we got, first for the muons\n",
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pt_e1</th>\n",
+       "      <th>pt_e2</th>\n",
+       "      <th>eta_e1</th>\n",
+       "      <th>eta_e2</th>\n",
+       "      <th>phi_e1</th>\n",
+       "      <th>phi_e2</th>\n",
+       "      <th>charge_e1</th>\n",
+       "      <th>charge_e2</th>\n",
+       "      <th>e1_x</th>\n",
+       "      <th>e1_y</th>\n",
+       "      <th>e1_z</th>\n",
+       "      <th>e2_x</th>\n",
+       "      <th>e2_y</th>\n",
+       "      <th>e2_z</th>\n",
+       "      <th>electron_m_inv</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54.378260</td>\n",
+       "      <td>50.591053</td>\n",
+       "      <td>0.697100</td>\n",
+       "      <td>1.150615</td>\n",
+       "      <td>-0.352306</td>\n",
+       "      <td>1.429148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>51.038324</td>\n",
+       "      <td>-18.763919</td>\n",
+       "      <td>41.052692</td>\n",
+       "      <td>7.142208</td>\n",
+       "      <td>50.084364</td>\n",
+       "      <td>71.932747</td>\n",
+       "      <td>85.018838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>87.847980</td>\n",
+       "      <td>25.325140</td>\n",
+       "      <td>-0.939279</td>\n",
+       "      <td>0.939353</td>\n",
+       "      <td>0.551186</td>\n",
+       "      <td>0.300517</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>74.838054</td>\n",
+       "      <td>46.005796</td>\n",
+       "      <td>-95.193195</td>\n",
+       "      <td>24.190156</td>\n",
+       "      <td>7.496603</td>\n",
+       "      <td>27.445435</td>\n",
+       "      <td>102.905474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>77.224910</td>\n",
+       "      <td>48.918434</td>\n",
+       "      <td>-0.145583</td>\n",
+       "      <td>1.188260</td>\n",
+       "      <td>2.972307</td>\n",
+       "      <td>2.624266</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-76.121011</td>\n",
+       "      <td>13.010703</td>\n",
+       "      <td>-11.282394</td>\n",
+       "      <td>-42.517193</td>\n",
+       "      <td>24.193005</td>\n",
+       "      <td>72.805704</td>\n",
+       "      <td>90.728059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>117.825530</td>\n",
+       "      <td>44.724277</td>\n",
+       "      <td>-0.090705</td>\n",
+       "      <td>-0.235326</td>\n",
+       "      <td>1.904418</td>\n",
+       "      <td>-3.017226</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-38.583991</td>\n",
+       "      <td>111.328932</td>\n",
+       "      <td>-10.702066</td>\n",
+       "      <td>-44.378846</td>\n",
+       "      <td>-5.547881</td>\n",
+       "      <td>-10.622216</td>\n",
+       "      <td>91.980353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56.355495</td>\n",
+       "      <td>47.292150</td>\n",
+       "      <td>-1.097858</td>\n",
+       "      <td>-0.036156</td>\n",
+       "      <td>0.145205</td>\n",
+       "      <td>1.390495</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>55.762424</td>\n",
+       "      <td>8.154381</td>\n",
+       "      <td>-75.069806</td>\n",
+       "      <td>8.480723</td>\n",
+       "      <td>46.525528</td>\n",
+       "      <td>-1.710291</td>\n",
+       "      <td>83.204474</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        pt_e1      pt_e2    eta_e1    eta_e2    phi_e1    phi_e2  charge_e1  \\\n",
+       "0   54.378260  50.591053  0.697100  1.150615 -0.352306  1.429148          1   \n",
+       "1   87.847980  25.325140 -0.939279  0.939353  0.551186  0.300517         -1   \n",
+       "2   77.224910  48.918434 -0.145583  1.188260  2.972307  2.624266         -1   \n",
+       "3  117.825530  44.724277 -0.090705 -0.235326  1.904418 -3.017226         -1   \n",
+       "4   56.355495  47.292150 -1.097858 -0.036156  0.145205  1.390495          1   \n",
+       "\n",
+       "   charge_e2       e1_x        e1_y       e1_z       e2_x       e2_y  \\\n",
+       "0         -1  51.038324  -18.763919  41.052692   7.142208  50.084364   \n",
+       "1          1  74.838054   46.005796 -95.193195  24.190156   7.496603   \n",
+       "2          1 -76.121011   13.010703 -11.282394 -42.517193  24.193005   \n",
+       "3          1 -38.583991  111.328932 -10.702066 -44.378846  -5.547881   \n",
+       "4         -1  55.762424    8.154381 -75.069806   8.480723  46.525528   \n",
+       "\n",
+       "        e2_z  electron_m_inv  \n",
+       "0  71.932747       85.018838  \n",
+       "1  27.445435      102.905474  \n",
+       "2  72.805704       90.728059  \n",
+       "3 -10.622216       91.980353  \n",
+       "4  -1.710291       83.204474  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# And for the electrons\n",
     "df2.head()"
    ]
   },
