Tutorial en código para el cálculo de la masa invariante de un boson Z que decae a un par l+l-.

--- a/Tutorials/Lepton-Invariant-Mass-Distribution.ipynb
+++ b/Tutorials/Lepton-Invariant-Mass-Distribution.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "### References:\n",
     "\n",
-    "Adam-Bourdarios, C., Cowan, G., Germain, C., Guyon, I., Kégl, B. &amp; Rousseau, D.. (2015). The Higgs boson machine learning challenge. <i>Proceedings of the NIPS 2014 Workshop on High-energy Physics and Machine Learning</i>, in <i>Proceedings of Machine Learning Research</i> 42:19-55 Available from https://proceedings.mlr.press/v42/cowa14.html."
+    "Adam-Bourdarios, C., Cowan, G., Germain, C., Guyon, I., Kégl, B. &amp; Rousseau, D.. (2015). The Higgs boson machine learning challenge. <i>Proceedings of the NIPS 2014 Workshop on High-energy Physics and Machine Learning</i>, in <i>Proceedings of Machine Learning Research</i> 42:19-55 Available from https://proceedings.mlr.press/v42/cowa14.html"
    ]
   },
   {
