Tutorial en código para el cálculo de la masa invariante de un boson de Higgs.

--- a/Tutorials/Higgs-Invariant-Mass.ipynb
+++ b/Tutorials/Higgs-Invariant-Mass.ipynb
@@ -940,7 +940,7 @@
     "# And we check the distribution\n",
     "\n",
     "sns.histplot(df[\"m_inv\"], bins = 1000, kde = False)\n",
-    "plt.axvline(x = 125, color = \"red\", linestyle = ':', label = r\"$m_{inv}$ = 125 GeV\")\n",
+    "plt.axvline(x = 125, color = \"red\", linestyle = ':', label = r\"$m_{inv}$ = 125\")\n",
     "plt.xlabel(r\"$m_{inv}$ (GeV)\")\n",
     "plt.ylabel(\"Number of events\")\n",
     "plt.title(r\"Higgs Boson Invariant mass\")\n",
