Tutorial de cómo crear una base de datos usando la librería variables_calculator para la señal (signal) y ruido (background) a partir de archivos .ROOT.

--- a/Tutorials/DataSet-Creation.ipynb
+++ b/Tutorials/DataSet-Creation.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "4        8     88.912941"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "4      1     92.662231  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "200000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -613,6 +613,336 @@
     "\n",
     "background.to_csv(\"Background.csv\")\n",
     "background.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRI_jet_leading_pt</th>\n",
+       "      <th>PRI_jet_subleading_pt</th>\n",
+       "      <th>PRI_jet_leading_eta</th>\n",
+       "      <th>PRI_jet_subleading_eta</th>\n",
+       "      <th>PRI_jet_leading_phi</th>\n",
+       "      <th>PRI_jet_subleading_phi</th>\n",
+       "      <th>PRI_jet_num</th>\n",
+       "      <th>PRI_jet_all_pt</th>\n",
+       "      <th>PRI_met</th>\n",
+       "      <th>PRI_met_phi</th>\n",
+       "      <th>DER_mass_jet_jet</th>\n",
+       "      <th>label</th>\n",
+       "      <th>DER_mass_lep</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>97.789627</td>\n",
+       "      <td>88.065651</td>\n",
+       "      <td>0.878810</td>\n",
+       "      <td>-0.736570</td>\n",
+       "      <td>2.420791</td>\n",
+       "      <td>-0.375482</td>\n",
+       "      <td>3</td>\n",
+       "      <td>205.819443</td>\n",
+       "      <td>29.468515</td>\n",
+       "      <td>-1.191945</td>\n",
+       "      <td>247.457836</td>\n",
+       "      <td>1</td>\n",
+       "      <td>92.925507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>69.906853</td>\n",
+       "      <td>64.256523</td>\n",
+       "      <td>1.287713</td>\n",
+       "      <td>-0.113773</td>\n",
+       "      <td>0.435103</td>\n",
+       "      <td>2.964018</td>\n",
+       "      <td>3</td>\n",
+       "      <td>170.760605</td>\n",
+       "      <td>4.302101</td>\n",
+       "      <td>-1.388696</td>\n",
+       "      <td>163.397858</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85.018837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>89.023056</td>\n",
+       "      <td>83.168976</td>\n",
+       "      <td>-0.946320</td>\n",
+       "      <td>-0.037001</td>\n",
+       "      <td>0.552948</td>\n",
+       "      <td>-3.103319</td>\n",
+       "      <td>3</td>\n",
+       "      <td>213.831802</td>\n",
+       "      <td>3.446326</td>\n",
+       "      <td>-2.115567</td>\n",
+       "      <td>185.076162</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102.905479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>137.439438</td>\n",
+       "      <td>127.212677</td>\n",
+       "      <td>-0.173504</td>\n",
+       "      <td>0.348251</td>\n",
+       "      <td>-0.170474</td>\n",
+       "      <td>-3.009968</td>\n",
+       "      <td>3</td>\n",
+       "      <td>304.227875</td>\n",
+       "      <td>4.129518</td>\n",
+       "      <td>2.948901</td>\n",
+       "      <td>270.594198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>82.369003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>49.592335</td>\n",
+       "      <td>46.715462</td>\n",
+       "      <td>-1.677774</td>\n",
+       "      <td>1.727845</td>\n",
+       "      <td>-1.408155</td>\n",
+       "      <td>1.710724</td>\n",
+       "      <td>2</td>\n",
+       "      <td>96.307800</td>\n",
+       "      <td>3.077592</td>\n",
+       "      <td>2.085407</td>\n",
+       "      <td>272.981686</td>\n",
+       "      <td>1</td>\n",
+       "      <td>92.662231</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PRI_jet_leading_pt  PRI_jet_subleading_pt  PRI_jet_leading_eta  \\\n",
+       "0           97.789627              88.065651             0.878810   \n",
+       "1           69.906853              64.256523             1.287713   \n",
+       "2           89.023056              83.168976            -0.946320   \n",
+       "3          137.439438             127.212677            -0.173504   \n",
+       "4           49.592335              46.715462            -1.677774   \n",
+       "\n",
+       "   PRI_jet_subleading_eta  PRI_jet_leading_phi  PRI_jet_subleading_phi  \\\n",
+       "0               -0.736570             2.420791               -0.375482   \n",
+       "1               -0.113773             0.435103                2.964018   \n",
+       "2               -0.037001             0.552948               -3.103319   \n",
+       "3                0.348251            -0.170474               -3.009968   \n",
+       "4                1.727845            -1.408155                1.710724   \n",
+       "\n",
+       "   PRI_jet_num  PRI_jet_all_pt    PRI_met  PRI_met_phi  DER_mass_jet_jet  \\\n",
+       "0            3      205.819443  29.468515    -1.191945        247.457836   \n",
+       "1            3      170.760605   4.302101    -1.388696        163.397858   \n",
+       "2            3      213.831802   3.446326    -2.115567        185.076162   \n",
+       "3            3      304.227875   4.129518     2.948901        270.594198   \n",
+       "4            2       96.307800   3.077592     2.085407        272.981686   \n",
+       "\n",
+       "   label  DER_mass_lep  \n",
+       "0      1     92.925507  \n",
+       "1      1     85.018837  \n",
+       "2      1    102.905479  \n",
+       "3      1     82.369003  \n",
+       "4      1     92.662231  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "signal.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PRI_jet_leading_pt</th>\n",
+       "      <th>PRI_jet_subleading_pt</th>\n",
+       "      <th>PRI_jet_leading_eta</th>\n",
+       "      <th>PRI_jet_subleading_eta</th>\n",
+       "      <th>PRI_jet_leading_phi</th>\n",
+       "      <th>PRI_jet_subleading_phi</th>\n",
+       "      <th>PRI_jet_num</th>\n",
+       "      <th>PRI_jet_all_pt</th>\n",
+       "      <th>PRI_met</th>\n",
+       "      <th>PRI_met_phi</th>\n",
+       "      <th>DER_mass_jet_jet</th>\n",
+       "      <th>label</th>\n",
+       "      <th>DER_mass_lep</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>61.858978</td>\n",
+       "      <td>50.390411</td>\n",
+       "      <td>0.001605</td>\n",
+       "      <td>-1.163691</td>\n",
+       "      <td>1.761646</td>\n",
+       "      <td>-1.186303</td>\n",
+       "      <td>3</td>\n",
+       "      <td>128.668365</td>\n",
+       "      <td>0.903545</td>\n",
+       "      <td>0.342974</td>\n",
+       "      <td>130.712745</td>\n",
+       "      <td>0</td>\n",
+       "      <td>92.865944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59.200146</td>\n",
+       "      <td>57.255505</td>\n",
+       "      <td>0.018362</td>\n",
+       "      <td>-0.708189</td>\n",
+       "      <td>-1.146716</td>\n",
+       "      <td>2.447471</td>\n",
+       "      <td>4</td>\n",
+       "      <td>199.598618</td>\n",
+       "      <td>1.933875</td>\n",
+       "      <td>-0.978839</td>\n",
+       "      <td>121.428789</td>\n",
+       "      <td>0</td>\n",
+       "      <td>91.787567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>64.045975</td>\n",
+       "      <td>57.252205</td>\n",
+       "      <td>-0.505538</td>\n",
+       "      <td>0.144685</td>\n",
+       "      <td>-2.849891</td>\n",
+       "      <td>1.336503</td>\n",
+       "      <td>3</td>\n",
+       "      <td>153.353973</td>\n",
+       "      <td>29.304701</td>\n",
+       "      <td>-0.519342</td>\n",
+       "      <td>112.344104</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90.618088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>75.073952</td>\n",
+       "      <td>68.324547</td>\n",
+       "      <td>-0.348803</td>\n",
+       "      <td>0.397656</td>\n",
+       "      <td>-1.431973</td>\n",
+       "      <td>1.396415</td>\n",
+       "      <td>3</td>\n",
+       "      <td>144.677231</td>\n",
+       "      <td>22.149502</td>\n",
+       "      <td>2.813292</td>\n",
+       "      <td>151.696408</td>\n",
+       "      <td>0</td>\n",
+       "      <td>90.586159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>63.593616</td>\n",
+       "      <td>41.097408</td>\n",
+       "      <td>0.618120</td>\n",
+       "      <td>0.906702</td>\n",
+       "      <td>2.578294</td>\n",
+       "      <td>-1.001227</td>\n",
+       "      <td>3</td>\n",
+       "      <td>136.130844</td>\n",
+       "      <td>0.212966</td>\n",
+       "      <td>0.644359</td>\n",
+       "      <td>100.896154</td>\n",
+       "      <td>0</td>\n",
+       "      <td>89.680992</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PRI_jet_leading_pt  PRI_jet_subleading_pt  PRI_jet_leading_eta  \\\n",
+       "0           61.858978              50.390411             0.001605   \n",
+       "1           59.200146              57.255505             0.018362   \n",
+       "2           64.045975              57.252205            -0.505538   \n",
+       "3           75.073952              68.324547            -0.348803   \n",
+       "4           63.593616              41.097408             0.618120   \n",
+       "\n",
+       "   PRI_jet_subleading_eta  PRI_jet_leading_phi  PRI_jet_subleading_phi  \\\n",
+       "0               -1.163691             1.761646               -1.186303   \n",
+       "1               -0.708189            -1.146716                2.447471   \n",
+       "2                0.144685            -2.849891                1.336503   \n",
+       "3                0.397656            -1.431973                1.396415   \n",
+       "4                0.906702             2.578294               -1.001227   \n",
+       "\n",
+       "   PRI_jet_num  PRI_jet_all_pt    PRI_met  PRI_met_phi  DER_mass_jet_jet  \\\n",
+       "0            3      128.668365   0.903545     0.342974        130.712745   \n",
+       "1            4      199.598618   1.933875    -0.978839        121.428789   \n",
+       "2            3      153.353973  29.304701    -0.519342        112.344104   \n",
+       "3            3      144.677231  22.149502     2.813292        151.696408   \n",
+       "4            3      136.130844   0.212966     0.644359        100.896154   \n",
+       "\n",
+       "   label  DER_mass_lep  \n",
+       "0      0     92.865944  \n",
+       "1      0     91.787567  \n",
+       "2      0     90.618088  \n",
+       "3      0     90.586159  \n",
+       "4      0     89.680992  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "background.head()"
    ]
   }
  ],
